--- a/09-spatial-autocorrelation.Rmd
+++ b/09-spatial-autocorrelation.Rmd
@@ -7,8 +7,7 @@
 
 # Loading the data 
 
-We will work with an example data set from the nlme package. This data set is
-also used as an example in the accompanying textbook by Pinheiro and Bates.
+We will work with an example data set from the nlme package. This data set is also used as an example in the accompanying textbook by Pinheiro and Bates.
 
 ```{r}
 library(nlme)
@@ -22,14 +21,11 @@ ggplot(d, aes(longitude, latitude, size = yield, colour = variety)) +
   geom_point()
 ```
 
-This data set represents yield from various varieties of wheat collected at
-different latitudes and longitudes.
+This data set represents yield from various varieties of wheat collected at different latitudes and longitudes.
 
 # Fitting a model with `nlme::gls`
 
-So far we have used the `lme` function from the nlme package to fit linear
-mixed effect models. This package also has the function `gls`, which lets you
-use the features of nlme when fitting linear models without random effects.
+So far we have used the `lme` function from the nlme package to fit linear mixed effect models. This package also has the function `gls`, which lets you use the features of nlme when fitting linear models without random effects.
 
 ```{r}
 m1 <- gls(yield ~ variety - 1, data = d)
@@ -44,27 +40,17 @@ ggplot(d, aes(longitude, latitude, colour = res)) +
   geom_point(size = 5) + scale_color_gradient2()
 ```
 
-We can clearly see that the residuals have spatial clumping patterns. Why is this a 
-problem?
+We can clearly see that the residuals have spatial clumping patterns. Why is this a problem?
 
-The nlme package comes with a built-in function for plotting a semivariogram.
-This represents half the average squared difference between residuals at
-increasing distances from each other. So this is inversely related to
-correlation. Small values mean that the residuals are very similar to each
-other. This is a common plot in spatial statistics and there are plenty of
-references on the topic you can find online. 
+The nlme package comes with a built-in function for plotting a semivariogram. This represents half the average squared difference between residuals at increasing distances from each other. So this is inversely related to correlation. Small values mean that the residuals are very similar to each other. This is a common plot in spatial statistics and there are plenty of references on the topic you can find online. 
 
 ```{r}
 plot(Variogram(m1, form = ~ latitude + longitude))
 ```
 
-If we look at the semivariogram, we can take a guess at good initial starting 
-values for a range value and nugget effect. For the `nlme::corSpher()` 
-correlation structure, the nugget represents the intercept value and the range 
-represents the distance at which the semivariogram reaches 1.
+If we look at the semivariogram, we can take a guess at good initial starting values for a range value and nugget effect. For the `nlme::corSpher()` correlation structure, the nugget represents the intercept value and the range represents the distance at which the semivariogram reaches 1.
 
-By looking at the above semivariogram we can eyeball what those values should
-be. We will give the correlation function starting values close to what we
+By looking at the above semivariogram we can eyeball what those values should be. We will give the correlation function starting values close to what we
 expect. 
 
 ```{r}
@@ -73,8 +59,7 @@ m2 <- update(m1,
 m2
 ```
 
-In fact, this is an example where if we don't give the correlation structure
-decent starting values it comes up with the wrong answer:
+In fact, this is an example where if we don't give the correlation structure decent starting values it comes up with the wrong answer:
 
 ```{r}
 m3 <- update(m1, 
@@ -82,9 +67,7 @@ m3 <- update(m1,
 m3
 ```
 
-Let's try plotting the residuals spatially and making another semivariogram.
-Note again how it is critical that we use `type = "normalized"` in order to
-incorporate the correlation structure into the residual calculations. 
+Let's try plotting the residuals spatially and making another semivariogram. Note again how it is critical that we use `type = "normalized"` in order to incorporate the correlation structure into the residual calculations. 
 
 ```{r}
 d$res2 <- as.numeric(residuals(m2, type = "normalized"))
@@ -101,31 +84,17 @@ We can also compare the models with AIC:
 bbmle::AICtab(m1, m2)
 ```
 
-So we are estimating 2 extra parameters as part of the spatial correlation
-structure, but the AIC strongly supports adding this model complexity. 
+So we are estimating 2 extra parameters as part of the spatial correlation structure, but the AIC strongly supports adding this model complexity. 
 
-We have used just one of a number of spatial correlation structures available
-in the nlme package. In fact, in their textbook (Mixed-Effects Models in S and
-S-PLUS), Pinheiro and Bates illustrate that the `nlme::corRatio()` structure
-provides a slightly better fit to this data set. If you are considering
-a spatial correlation structure, take a look at your various options: `corExp,
-corGaus, corLin, corRatio, corSpher`, linked to from `?nlme::corSpatial`
+We have used just one of a number of spatial correlation structures available in the nlme package. In fact, in their textbook (Mixed-Effects Models in S and S-PLUS), Pinheiro and Bates illustrate that the `nlme::corRatio()` structure provides a slightly better fit to this data set. If you are considering a spatial correlation structure, take a look at your various options: `corExp, corGaus, corLin, corRatio, corSpher`, linked to from `?nlme::corSpatial`
 
 # A quick version with GAMs
 
-A disadvantage of modeling spatial correlation this way is that there is no
-easy way to extract a spatial surface of predictions. An alternative and common
-way of dealing with spatial autocorrelation is to model the spatial process as
-a two-dimensional smooth term with a GAM. GAMs are beyond the scope of this
-workshop, but it's important to know that they exist.
+A disadvantage of modeling spatial correlation this way is that there is no easy way to extract a spatial surface of predictions. An alternative and common way of dealing with spatial autocorrelation is to model the spatial process as a two-dimensional smooth term with a GAM. GAMs are beyond the scope of this workshop, but it's important to know that they exist.
 
-GAMs are just like GLMs except that predictors can be allowed to follow
-a smoothed squiggly line. And the degree of squiggliness can be determined
-objectively within the fitting algorithm.
+GAMs are just like GLMs except that predictors can be allowed to follow a smoothed squiggly line. And the degree of squiggliness can be determined objectively within the fitting algorithm.
 
-As a demonstration, we will fit a version of this model with a GAM. The main
-package for fitting these models in R is mgcv. We will refit the `gls` model
-with maximum likelihood so that we can compare it to the GAM.
+As a demonstration, we will fit a version of this model with a GAM. The main package for fitting these models in R is mgcv. We will refit the `gls` model with maximum likelihood so that we can compare it to the GAM.
 
 ```{r}
 library(mgcv)
